packages/core/src/styles/spacing.scss
/* ... */
.mr-2 {
    margin-right: var(--static-space-2);
}

.mr-4 {
    margin-right: var(--static-space-4);
}

.mr-8 {
    margin-right: var(--static-space-8);
}

.mr-12 {
    margin-right: var(--static-space-12);
}

.mr-16 {
    margin-right: var(--static-space-16);
}

.mr-20 {
    margin-right: var(--static-space-20);
}

.mr-24 {
    margin-right: var(--static-space-24);
}

.mr-32 {
    margin-right: var(--static-space-32);
}

.mr-40 {
    margin-right: var(--static-space-40);
}

.mr-48 {
    margin-right: var(--static-space-48);
}

.mr-56 {
    margin-right: var(--static-space-56);
}

.mr-64 {
    margin-right: var(--static-space-64);
}

.mr-80 {
    margin-right: var(--static-space-80);
}

.mr-104 {
    margin-right: var(--static-space-104);
}

.mr-128 {
    margin-right: var(--static-space-128);
}

.mr-160 {
    margin-right: var(--static-space-160);
}

.mr-xs {
    margin-bottom: var(--responsive-space-xs);
}

.mr-s {
    margin-bottom: var(--responsive-space-s);
}

.mr-m {
    margin-bottom: var(--responsive-space-m);
}

.mr-l {
    margin-bottom: var(--responsive-space-l);
}

.mr-xl {
    margin-bottom: var(--responsive-space-xl);
}

/* BOTTOM */
.mb-0 {
    margin-bottom: var(--static-space-0);
}

.mb-1 {
    margin-bottom: var(--static-space-1);
}

.mb-2 {
    margin-bottom: var(--static-space-2);
}

.mb-4 {
    margin-bottom: var(--static-space-4);
}

.mb-8 {
    margin-bottom: var(--static-space-8);
}

.mb-12 {
    margin-bottom: var(--static-space-12);
}

.mb-16 {
    margin-bottom: var(--static-space-16);
}

.mb-20 {
    margin-bottom: var(--static-space-20);
}

.mb-24 {
    margin-bottom: var(--static-space-24);
}

.mb-32 {
    margin-bottom: var(--static-space-32);
}

.mb-40 {
    margin-bottom: var(--static-space-40);
}

.mb-48 {
    margin-bottom: var(--static-space-48);
}

.mb-56 {
    margin-bottom: var(--static-space-56);
}

.mb-64 {
    margin-bottom: var(--static-space-64);
}

.mb-80 {
    margin-bottom: var(--static-space-80);
}

.mb-104 {
    margin-bottom: var(--static-space-104);
}

.mb-128 {
    margin-bottom: var(--static-space-128);
}

.mb-160 {
    margin-bottom: var(--static-space-160);
}

.mb-xs {
    margin-bottom: var(--responsive-space-xs);
}

.mb-s {
    margin-bottom: var(--responsive-space-s);
}

.mb-m {
    margin-bottom: var(--responsive-space-m);
}

.mb-l {
    margin-bottom: var(--responsive-space-l);
}

.mb-xl {
    margin-bottom: var(--responsive-space-xl);
}

/* LEFT */
.ml-0 {
    margin-left: var(--static-space-0);
}

.ml-1 {
    margin-left: var(--static-space-1);
}

.ml-2 {
    margin-left: var(--static-space-2);
}

.ml-4 {
    margin-left: var(--static-space-4);
}

.ml-8 {
    margin-left: var(--static-space-8);
}

.ml-12 {
    margin-left: var(--static-space-12);
}

.ml-16 {
    margin-left: var(--static-space-16);
}

.ml-20 {
    margin-left: var(--static-space-20);
}

.ml-24 {
    margin-left: var(--static-space-24);
}

.ml-32 {
    margin-left: var(--static-space-32);
}

.ml-40 {
    margin-left: var(--static-space-40);
}

.ml-48 {
    margin-left: var(--static-space-48);
}

.ml-56 {
    margin-left: var(--static-space-56);
}

.ml-64 {
    margin-left: var(--static-space-64);
}

.ml-80 {
    margin-left: var(--static-space-80);
}

.ml-104 {
    margin-left: var(--static-space-104);
}

.ml-128 {
    margin-left: var(--static-space-128);
}

.ml-160 {
    margin-left: var(--static-space-160);
}

.ml-xs {
    margin-left: var(--responsive-space-xs);
}

.ml-s {
    margin-left: var(--responsive-space-s);
}

.ml-m {
    margin-left: var(--responsive-space-m);
}

.ml-l {
    margin-left: var(--responsive-space-l);
}

.ml-xl {
    margin-left: var(--responsive-space-xl);
}



  /****************************/
 /*           PADDING        */
/****************************/

/* EVEN */
.p-0 {
    padding: var(--static-space-0);
}

.p-1 {
    padding: var(--static-space-1);
}

.p-2 {
    padding: var(--static-space-2);
}

.p-4 {
    padding: var(--static-space-4);
}

.p-8 {
    padding: var(--static-space-8);
}

.p-12 {
    padding: var(--static-space-12);
}

.p-16 {
    padding: var(--static-space-16);
}

.p-20 {
    padding: var(--static-space-20);
}

.p-24 {
    padding: var(--static-space-24);
}

.p-32 {
    padding: var(--static-space-32);
}

.p-40 {
    padding: var(--static-space-40);
}

.p-48 {
    padding: var(--static-space-48);
}

.p-56 {
    padding: var(--static-space-56);
}

.p-64 {
    padding: var(--static-space-64);
}

.p-80 {
    padding: var(--static-space-80);
}

.p-104 {
    padding: var(--static-space-104);
}

.p-128 {
    padding: var(--static-space-128);
}

.p-160 {
    padding: var(--static-space-160);
}

.p-xs {
    padding: var(--responsive-space-xs);
}

.p-s {
    padding: var(--responsive-space-s);
}

.p-m {
    padding: var(--responsive-space-m);
}

.p-l {
    padding: var(--responsive-space-l);
}

.p-xl {
    padding: var(--responsive-space-xl);
}

/* X */
.px-0 {
    padding-left: var(--static-space-0);
    padding-right: var(--static-space-0);
}

.px-1 {
    padding-left: var(--static-space-1);
    padding-right: var(--static-space-1);
}

.px-2 {
    padding-left: var(--static-space-2);
    padding-right: var(--static-space-2);
}

.px-4 {
    padding-left: var(--static-space-4);
    padding-right: var(--static-space-4);
}

.px-8 {
    padding-left: var(--static-space-8);
    padding-right: var(--static-space-8);
}

.px-12 {
    padding-left: var(--static-space-12);
    padding-right: var(--static-space-12);
}

.px-16 {
    padding-left: var(--static-space-16);
    padding-right: var(--static-space-16);
}

.px-20 {
    padding-left: var(--static-space-20);
    padding-right: var(--static-space-20);
}

.px-24 {
    padding-left: var(--static-space-24);
    padding-right: var(--static-space-24);
}

.px-32 {
    padding-left: var(--static-space-32);
    padding-right: var(--static-space-32);
}

.px-40 {
    padding-left: var(--static-space-40);
    padding-right: var(--static-space-40);
}
/* ... */

